--- a/index.html
+++ b/index.html
@@ -557,6 +557,18 @@
           <block type="types_toboolean"></block>
           <block type="types_dataurl"></block>
           <block type="types_date"></block>
+          <block type="types_convertbase">
+            <value name="INPUT">
+              <shadow type="math_number">
+                <field name="NUM">15</field>
+              </shadow>
+            </value>
+            <value name="BASE">
+              <shadow type="math_number">
+                <field name="NUM">16</field>
+              </shadow>
+            </value>
+          </block>
         </category>
         <category name="Colour" categorystyle="colour_category">
           <block type="colour_picker"></block>
