--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <div id="creditsModal" class="credits-modal">
       <div class="credits-modal-content">
         <span class="credits-modal-close">&times;</span>
-        <h2>Credits</h2>
+        <br>
+        <img src="resources/rhinoblox credits.png" height="80"></img>
+        <br>
         <br>
         <h3 style="color: skyblue">RhinoBlox Owner</h3>
         <p>AblazeMuffin35</p>
@@ -48,6 +50,8 @@
           <a class="credits-modal-link" target="_blank" href="https://mathjs.org">Math.js</a>
           <span class="credits-modal-separator">, </span>
           <a class="credits-modal-link" target="_blank" href="https://samiare.github.io/Controller.js">Controller.js</a>
+          <span class="credits-modal-separator">, </span>
+          <a class="credits-modal-link" target="_blank" href="https://day.js.org/">Day.js</a>
         </p>
       </div>
     </div>
