--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
           <span class="credits-modal-separator">, </span>
           <a class="credits-modal-link" target="_blank" href="https://mathjs.org">Math.js</a>
           <span class="credits-modal-separator">, </span>
+          <br><br>
           <a class="credits-modal-link" target="_blank" href="https://samiare.github.io/Controller.js">Controller.js</a>
           <span class="credits-modal-separator">, </span>
           <a class="credits-modal-link" target="_blank" href="https://day.js.org/">Day.js</a>
+          <span class="credits-modal-separator">, </span>
+          <a class="credits-modal-link" target="_blank" href="https://socket.io">Socket.io</a>
         </p>
       </div>
     </div>
@@ -1497,7 +1500,12 @@
       </xml>
 
       <div class="footer">
-        <a style="float: left; padding: 0px 15px" id="creditsModalBtn" class="credits-link">Credits</a><a href="https://discord.gg/YwdvExN82q" target="_blank" style="float: right; padding: 0px 15px" class="credits-link">Discord</a><b style="float: right; padding: 0px 0px; color: #a6a5ab">|</b><a href="recovery/index.html" target="_blank" style="float: right; padding: 0px 15px" class="credits-link">Project Recovery</a>
+        <a style="float: left; padding: 0px 15px" id="creditsModalBtn" class="credits-link">Credits</a>
+        <a href="https://ablazemuffin35.vercel.app" target="_blank" style="float: right; padding: 0px 15px" class="credits-link">AblazeMuffin35</a>
+        <b style="float: right; padding: 0px 0px; color: #a6a5ab">|</b>
+        <a href="https://discord.gg/YwdvExN82q" target="_blank" style="float: right; padding: 0px 15px" class="credits-link">Discord</a>
+        <b style="float: right; padding: 0px 0px; color: #a6a5ab">|</b>
+        <a href="recovery/index.html" target="_blank" style="float: right; padding: 0px 15px" class="credits-link">Project Recovery</a>
       </div>
 
       <!-- Initialize Blockly -->
