--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>AblazeMuffin35</p>
         <br>
         <h3 style="color: skyblue">Rhinus Developers</h3>
-        <p>ItalianYeney1<span class="credits-modal-separator">, </span>Tech72Wizard<span class="credits-modal-separator">, </span>Page</p>
+        <p>Tech72Wizard<span class="credits-modal-separator">, </span>Page</p>
         <br>
         <h3 style="color: skyblue">Special Thanks</h3>
         <p>
